@@ -977,10 +977,84 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
     protected void purchase(boolean purcahseForBid, int PUsToSpend, IPurchaseDelegate purchaseDelegate, GameData data, PlayerID player)
     {
         if (purcahseForBid)
-        {          
-            return;
+        {
+        	// bid will only buy land units, due to placement for bid not being able to handle sea units
+            Resource PUs = data.getResourceList().getResource(Constants.PUS);
+            int leftToSpend = PUsToSpend;
+            
+            List<ProductionRule> rules = player.getProductionFrontier().getRules();
+            IntegerMap<ProductionRule> purchase = new IntegerMap<ProductionRule>();
+
+            List<RepairRule> rrules = Collections.emptyList();
+            CompositeMatch<Unit> ourFactories = new CompositeMatchAnd<Unit>(Matches.unitIsOwnedBy(player), Matches.UnitIsFactory);
+    		List<Territory> factories = SUtils.findUnitTerr(data, player, ourFactories);
+            if(player.getRepairFrontier() != null) // figure out if anything needs to be repaired
+            {
+                rrules = player.getRepairFrontier().getRules();
+                IntegerMap<RepairRule> repairMap = new IntegerMap<RepairRule>();
+                HashMap<Territory, IntegerMap<RepairRule>> repair = new HashMap<Territory, IntegerMap<RepairRule>>();
+                Boolean repairs = false;
+                int diff = 0;
+    		    for (RepairRule rrule : rrules)
+                {
+                    for (Territory fixTerr : factories)
+                    {
+                        if (!Matches.territoryHasOwnedFactory(data, player).match(fixTerr))
+                	 	    continue;
+            		    TerritoryAttachment ta = TerritoryAttachment.get(fixTerr);
+                	    diff = ta.getProduction() - ta.getUnitProduction();
+                	    diff = Math.min(diff, leftToSpend);
+                        if(diff > 0)
+                        {
+                            repairMap.add(rrule, diff);
+                            repair.put(fixTerr, repairMap);
+                            leftToSpend -= diff;
+                            repairs = true;
+    					}
+    				}
+            	}
+                if (repairs)
+                {
+                    purchaseDelegate.purchaseRepair(repair);
+                }
+        	}
+
+            int minCost = Integer.MAX_VALUE;
+            while(minCost == Integer.MAX_VALUE ||  leftToSpend >= minCost)
+            {
+                for(ProductionRule rule : rules)
+                {
+                    int cost = rule.getCosts().getInt(PUs);
+                    
+                    if(minCost == Integer.MAX_VALUE)
+                    {
+                        minCost = cost;
+                    }
+                    if(minCost > cost)
+                    {
+                        minCost = cost;
+                    }
+                    
+                    UnitType results = (UnitType) rule.getResults().keySet().iterator().next();
+                    if(Matches.UnitTypeIsSea.match(results) || Matches.UnitTypeIsAir.match(results) ||  Matches.UnitTypeIsAA.match(results) || Matches.UnitTypeIsFactory.match(results))
+                    {
+                        continue;
+                    }
+                    
+                    //give a preference to cheap units
+                    if (Math.random() * cost < 2)
+                    {
+                        if(cost <= leftToSpend)
+                        {
+                            leftToSpend-= cost;
+                            purchase.add(rule, 1);
+                        }
+                    }
+                }
+            }
+            purchaseDelegate.purchase(purchase);
+        	return;
         }
-        
         pause();
 
         boolean isAmphib = isAmphibAttack(player); 
@@ -995,7 +1069,6 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
         Resource PUs = data.getResourceList().getResource(Constants.PUS);
 
         int leftToSpend = player.getResources().getQuantity(PUs );
-        
         
         List<ProductionRule> rules = player.getProductionFrontier().getRules();
         IntegerMap<ProductionRule> purchase = new IntegerMap<ProductionRule>();
@@ -1023,6 +1096,7 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
                     {
                         repairMap.add(rrule, diff);
                         repair.put(fixTerr, repairMap);
+                        leftToSpend-= diff;
                         repairs = true;
 					}
 				}
@@ -1030,13 +1104,11 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
             if (repairs)
             {
                 purchaseDelegate.purchaseRepair(repair);
-                leftToSpend -= diff;
             }
     	}
 
-        
         int minCost = Integer.MAX_VALUE;
-        while(minCost == Integer.MAX_VALUE ||  leftToSpend > minCost)
+        while(minCost == Integer.MAX_VALUE ||  leftToSpend >= minCost)
         {
             for(ProductionRule rule : rules)
             {
@@ -1051,7 +1123,6 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
                     minCost = cost;
                 }
                 
-                
                 UnitType results = (UnitType) rule.getResults().keySet().iterator().next();
                 if(Matches.UnitTypeIsAir.match(results) ||  Matches.UnitTypeIsAA.match(results) || Matches.UnitTypeIsFactory.match(results))
                 {
@@ -1065,7 +1136,6 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
                 {
                     continue;
                 }
-                
                 
                 //give a preferene to cheap units, and to transports
                 //but dont go overboard with buying transports
@@ -1101,12 +1171,7 @@ public class WeakAI extends AbstractAI implements IGamePlayer, ITripleaPlayer
                 }
             }
         }
-        
-        
         purchaseDelegate.purchase(purchase);
-        
-        
-       
     }
 
  
